--- a/Magic scov.html
+++ b/Magic scov.html
@@ -236,15 +236,15 @@
 
     <div class="input-section">
         <div class="input-group">
-            <div class="input-label">День (B)</div>
+            <div class="input-label">День</div>
             <input type="number" id="day" min="1" max="31" value="11">
         </div>
         <div class="input-group">
-            <div class="input-label">Месяц (A)</div>
+            <div class="input-label">Месяц</div>
             <input type="number" id="month" min="1" max="12" value="1">
         </div>
         <div class="input-group">
-            <div class="input-label">Год (полный)</div>
+            <div class="input-label">Год</div>
             <input type="number" id="year" value="2001">
         </div>
     </div>
@@ -430,3 +430,4 @@
     </script>
 </body>
 </html>
+
