--- a/Magic scov.html
+++ b/Magic scov.html
@@ -48,6 +48,7 @@
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
+            text-align: center; /* Центрируем заголовок */
         }
 
         .input-section {
@@ -70,6 +71,7 @@
             font-size: 14px;
             color: #d8bfd8;
             text-shadow: 0 0 5px rgba(224, 176, 255, 0.7);
+            text-align: center;
         }
 
         input[type="number"] {
@@ -141,6 +143,7 @@
             font-size: 1.2rem;
             color: #d8bfd8;
             text-shadow: 0 0 8px rgba(224, 176, 255, 0.7);
+            text-align: center; /* Центрируем заголовки таблиц */
         }
 
         table {
@@ -263,6 +266,11 @@
                 font-size: 16px;
                 padding: 8px;
             }
+
+            h1 {
+                font-size: 1.8rem;
+                margin: 15px 0 10px;
+            }
         }
     </style>
 </head>
@@ -287,18 +295,7 @@
     <button onclick="calculate()">✨ Бам бум бабах ✨</button>
 
     <div class="tables-container">
-        <!-- Магический Квадрат -->
-        <div class="table-wrapper">
-            <div class="table-title">✨ Магический Квадрат</div>
-            <table id="magicTable">
-                <tr><td id="m1A"></td><td id="m1B"></td><td id="m1C"></td><td id="m1D"></td></tr>
-                <tr><td id="m2A"></td><td id="m2B"></td><td id="m2C"></td><td id="m2D"></td></tr>
-                <tr><td id="m3A"></td><td id="m3B"></td><td id="m3C"></td><td id="m3D"></td></tr>
-                <tr><td id="m4A"></td><td id="m4B"></td><td id="m4C"></td><td id="m4D"></td></tr>
-            </table>
-        </div>
-
-        <!-- Реальный Квадрат -->
+        <!-- Реальный Квадрат (слева) -->
         <div class="table-wrapper">
             <div class="table-title">🔍 Реальный Квадрат</div>
             <table id="rawTable">
@@ -306,6 +303,17 @@
                 <tr><td id="r2A"></td><td id="r2B"></td><td id="r2C"></td><td id="r2D"></td></tr>
                 <tr><td id="r3A"></td><td id="r3B"></td><td id="r3C"></td><td id="r3D"></td></tr>
                 <tr><td id="r4A"></td><td id="r4B"></td><td id="r4C"></td><td id="r4D"></td></tr>
+            </table>
+        </div>
+
+        <!-- Магический Квадрат (справа) -->
+        <div class="table-wrapper">
+            <div class="table-title">✨ Магический Квадрат</div>
+            <table id="magicTable">
+                <tr><td id="m1A"></td><td id="m1B"></td><td id="m1C"></td><td id="m1D"></td></tr>
+                <tr><td id="m2A"></td><td id="m2B"></td><td id="m2C"></td><td id="m2D"></td></tr>
+                <tr><td id="m3A"></td><td id="m3B"></td><td id="m3C"></td><td id="m3D"></td></tr>
+                <tr><td id="m4A"></td><td id="m4B"></td><td id="m4C"></td><td id="m4D"></td></tr>
             </table>
         </div>
     </div>
